<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_converter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:weightSum="1"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/headerProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_amount"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/amount_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textSize="@dimen/text_hint"
            android:gravity="center_vertical"
            android:background="@android:color/transparent"
            android:inputType="numberDecimal|numberSigned" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_from"
            android:elevation="1dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spn_currency_from"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currency_to"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spn_currency_to"
            android:minHeight="48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outcome_amount"
            android:paddingTop="16dp"
            android:paddingBottom="8dp" />

        <TextView
            android:id="@+id/amount_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:gravity="center_vertical"
            android:paddingRight="16dp"
            android:paddingLeft="16dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginRight="16dp"
        android:layout_gravity="right"
        android:text="@string/convert" />

</LinearLayout>